# SamsungDebloating

./: README.md  pyproject.toml
data/: samsung.json
src/samsungdebloating/: __about__.py  __init__.py  adb_connector.py  bloatware_detector.py  main.py
